--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup .NET
-        run: dotnet dotnet workload restore --project Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
-        shell: bash
         
       - name: Build
-        run: dotnet build -p:GITHUB_ACCESS_TOKEN=${{ secrets.GITHUB_TOKEN }}
+        run: dotnet build -p:GITHUB_ACCESS_TOKEN=${{ secrets.GITHUB_TOKEN }} -p:Laerdal_Package_Output=${GITHUB_WORKSPACE}/artifacts
         shell: bash
         env: 
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
