--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         shell: bash
 
       - name: Build
-        run: dotnet build -p:GITHUB_ACCESS_TOKEN=${{ secrets.GITHUB_TOKEN }} -p:Laerdal_Package_Output=${GITHUB_WORKSPACE}/artifacts
+        run: dotnet build -p:GITHUB_ACCESS_TOKEN=${{ secrets.GITHUB_TOKEN }}
         shell: bash
         env: 
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -32,5 +32,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: output
-          path: ${GITHUB_WORKSPACE}/artifacts
+          path: Output
           if-no-files-found: error
