Also print env and input

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,18 @@ jobs:
           printenv | grep -i github
         shell: bash
 
+      - name: Print Input Context Values
+        run: |
+          echo "GitHub Variables:"
+          printenv | grep -i input
+        shell: bash
+        
+      - name: Print Input Context Values
+        run: |
+          echo "GitHub Variables:"
+          printenv | grep -i input
+        shell: bash
+
       - name: Checkout
         uses: actions/checkout@v4
         
