--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.targets
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.targets
@@ -3,34 +3,19 @@
 
     <!-- ==================== DEFAULT CONFIGURATION ==================== -->
     <PropertyGroup>
-        <Optimize>false</Optimize>
-        <LangVersion>latest</LangVersion>
-        <NeutralLanguage>en</NeutralLanguage>
-        <DebugSymbols>true</DebugSymbols>
-        <OutputPath>bin\</OutputPath>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-        <OutputType>Library</OutputType>
-
-        <PackOnBuild>true</PackOnBuild>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
         <IncludeSource>True</IncludeSource>
         <IncludeSymbols>True</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-
-        <!-- see : https://cezarypiatek.github.io/post/managing-output-in-sdk-projects/ -->
-        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <!-- MSB9004 : ManifestResourceWithNoCulture item type is deprecated. -->
-        <MSBuildWarningsAsMessages>$(MSBuildWarningsAsMessages);MSB9004</MSBuildWarningsAsMessages>
-        <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-
         <Deterministic>true</Deterministic>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
 
     <!-- ==================== DEFAULT CI CONFIGURATION ==================== -->
     <PropertyGroup>
+        <ContinuousIntegrationBuild>false</ContinuousIntegrationBuild>
         <!-- https://learn.microsoft.com/en-us/azure/devops/pipelines/build/variables?view=azure-devops&tabs=yaml&WT.mc_id=DT-MVP-5003978#system-variables -->
         <ContinuousIntegrationBuild Condition="'$(TF_BUILD)' == 'true'">true</ContinuousIntegrationBuild>
         <!-- https://help.github.com/en/actions/configuring-and-managing-workflows/using-environment-variables -->
