--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -113,5 +113,4 @@ jobs:
                   push                                                                            \
                   --source   "https://api.nuget.org/v3/index.json"                                \
                   --api-key  "${{env.SCL_NUGET_ORG_FEED_API_KEY}}"                                \
-                  *nupkg
-
+                  *.nupkg
