--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
@@ -47,7 +47,7 @@
                 Overwrite="true"/>
 
         <Exec
-                Condition="!Exists('Carthage\Carthage\Build\iOSDFULibrary.xcframework')"
+                Condition="!Exists('Carthage\Carthage\Build\iOSDFULibrary.xcframework\Package.swift')"
                 Command="carthage update --project-directory Carthage --use-xcframeworks --platform iOS"
                 EnvironmentVariables="GITHUB_ACCESS_TOKEN=github.com=$(Laerdal_Github_Access_Token)"/>
 
