fix (Laerdal.Dfu.Bindings.iOS.csproj): _DownloadIosNativeFiles now doesn't run automatically upon initial project loading

--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
@@ -42,7 +42,12 @@
         <Compile Remove="Sharpie/**/*.cs"/>
     </ItemGroup>
 
-    <Target Name="_DownloadIosNativeFiles" BeforeTargets="BeforeBuild">
+    <Target Condition=" '$(DesignTimeBuild)' != 'true' and '$(BuildingProject)' == 'true' "
+            Name="_DownloadIosNativeFiles"
+            BeforeTargets="BeforeBuild">
+
+        <Message Importance="High" Text="** Downloading Carthage iOS packages ..."/>
+
         <WriteLinesToFile
                 File="Carthage\Cartfile"
                 Lines="github &quot;NordicSemiconductor/IOS-Pods-DFU-Library&quot; &quot;$(Nordic_Package_Version)&quot;"
